--- a/src/sass/Portfolio/Portfolio.scss
+++ b/src/sass/Portfolio/Portfolio.scss
@@ -6,18 +6,29 @@
     align-items: space-around;
     justify-content: space-around;
     align-content: space-evenly;
+    position: relative;
     &__link {
         height: 33%;
         width: 32%;
         border: 3px solid $color1;
         cursor: pointer;
-        box-shadow: 2px 2px 10px black;
+        box-shadow: 0px 0px 12px black;
         overflow: hidden;
         display: flex;
         align-items: center;
         justify-content: center;
         text-decoration: none;
         position: relative;
+        z-index: 1;
+    }
+
+    &__background{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: $color1;
+        clip-path: polygon(73% 0, 100% 0, 100% 100%, 0 100%, 100% 100%, 100% 60%, 35% 0);
+        margin-left: -10vh;
     }
 
     &__link:hover #txt {
@@ -67,6 +78,9 @@
         &__txt {
             font-size: 22px;
         }
+        &__background{
+            display: none;
+        }
     }
 }
 
@@ -88,6 +102,9 @@
         }
         &__txt {
             font-size: 22px;
+        }
+        &__background{
+            display: none;
         }
     }
 }
