--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -86,7 +86,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
     font-size: 35px;
     height: 10vh;
     width: 100%;
@@ -110,7 +109,6 @@
         text-align: center;
         display: flex;
         height: 100%;
-        padding-top: 5px;
         &:hover {
             font-weight: bolder;
             cursor: pointer;
@@ -118,13 +116,15 @@
                 text-shadow: 1px 1px 1px black;
             }
         }
+        i {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
     &__txt {
-        font-size: 15px;
-        width: 8vh;
-        font-weight: bold;
-        text-align: center;
-        width: 100%;
+        display: none;
     }
 
     a:after {
